<resources>
    <string name="app_name">AdamInfiesto_CE01</string>
    <string name="tv_output">Attempt Counts</string>
    <string name="tv_Game">Hit Button to begin</string>
    <string name="btn_01">A</string>
    <string name="btn_02">B</string>
    <string name="btn_03">C</string>
    <string name="btn_04">D</string>
    <string name="btn_05">E</string>
    <string name="btn_06">F</string>
    <string name="btn_07">G</string>
    <string name="btn_08">H</string>
    <string name="btn_09">A</string>
    <string name="btn_10">B</string>
    <string name="btn_11">C</string>
    <string name="btn_12">D</string>
    <string name="btn_13">E</string>
    <string name="btn_14">F</string>
    <string name="btn_15">G</string>
    <string name="btn_16">H</string>
    <string name="btn18">Randomize</string>
</resources>
